--- a/app-demo.properties
+++ b/app-demo.properties
@@ -2,3 +2,7 @@ uriBase=mongodb://localhost:27017
 nameBase=springmongodb
 nameCollection=testCollection
 uriRabbit=localhost
+URIserverFTP=localhost
+portFTP=21
+userFTP=german
+passwordFTP=
